# fastapi-clean-architecture-app-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_name}}/: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  asgi.py  compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  tox.ini
{{cookiecutter.project_name}}/src/api/: __init__.py  items.py  numbers.py
{{cookiecutter.project_name}}/src/api/endpoints/: items.py  sum.py
{{cookiecutter.project_name}}/src/api/serializers/: items.py
{{cookiecutter.project_name}}/src/app/: config.py  logging.py  web.py
{{cookiecutter.project_name}}/src/data/: base.py
{{cookiecutter.project_name}}/src/data/authn/: idp.py
{{cookiecutter.project_name}}/src/data/items/: __init__.py  repository.py
{{cookiecutter.project_name}}/src/data/postgres/: engine.py
{{cookiecutter.project_name}}/src/data/postgres/migrations/: env.py
{{cookiecutter.project_name}}/src/data/postgres/repository/: item.py  item_dto.py
{{cookiecutter.project_name}}/src/domain/use_cases/items/: get_item.py  update_item.py
{{cookiecutter.project_name}}/src/domain/use_cases/numbers/: __init__.py  divide.py  multiply.py  summarise.py
{{cookiecutter.project_name}}/src/infrastructure/clients/: kafka.py
{{cookiecutter.project_name}}/src/infrastructure/clients/http_client/: base.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/: engine.py
{{cookiecutter.project_name}}/src/infrastructure/clients/postgres/migrations/: env.py
{{cookiecutter.project_name}}/src/infrastructure/core/: application.py  log_config.py  settings.py  telemetry.py
{{cookiecutter.project_name}}/src/infrastructure/core/interceptors/: authn.py
{{cookiecutter.project_name}}/src/infrastructure/core/middlewares/: error_handling.py  log_requests.py
{{cookiecutter.project_name}}/src/service/: application.py  cache.py  config.py  kafka.py  logging.py  logging_config.py  redis.py  s3.py
{{cookiecutter.project_name}}/src/service/dependencies/: authn.py
{{cookiecutter.project_name}}/src/service/errors/: constants.py  handlers.py
{{cookiecutter.project_name}}/src/service/http/: base.py  client.py
{{cookiecutter.project_name}}/src/service/middlewares/: correlation_id.py  error_handling.py  log_requests.py  trace_id.py
{{cookiecutter.project_name}}/src/service/postgres/: engine.py
{{cookiecutter.project_name}}/src/service/postgres/migrations/: env.py
{{cookiecutter.project_name}}/src/service/postgres/models/: __init__.py  items.py
{{cookiecutter.project_name}}/src/use_cases/: sum.py
{{cookiecutter.project_name}}/src/use_cases/items/: __init__.py  create_item.py  delete_item.py  get_item.py  update_item.py
{{cookiecutter.project_name}}/src/use_cases/numbers/: __init__.py  divide.py  multiply.py  subtract.py  summarise.py
{{cookiecutter.project_name}}/src/utils/: logging_filter.py
{{cookiecutter.project_name}}/src/utils/middlewares/: error_handling.py  request_id.py
{{cookiecutter.project_name}}/tests/: conftest.py  expected_data.py  moks_data.py  test_items.py  test_numbers.py
{{cookiecutter.project_name}}/tests/data/: expected_data.py  mock_data.py
{{cookiecutter.project_name}}/tests/fixtures/: items.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/api/: __init__.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/api/endpoints/: items.py  sum.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/app/: config.py  logging.py  web.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/data/postgres/: engine.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/data/postgres/migrations/: env.py  script.py.mako
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/data/postgres/models/: item.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/data/postgres/repository/: item.py  item_dto.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/use_cases/: base.py  sum.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/use_cases/items/: create_item.py  get_item.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/utils/: logging_filter.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/utils/errors/: constants.py  exceptions.py  handlers.py
{{cookiecutter.project_name}}/{{ cookiecutter.project_slug }}/utils/middlewares/: request_id_manager.py
